--- a/conditional.logic.html
+++ b/conditional.logic.html
@@ -8,6 +8,8 @@
 <body>
     <h2>Er du gammel nok til å kjøre bil?</h2>
     <p id="carmessage"></p>
+<h2>Kan spilleren åpne døren?</h2>
+<p id="doormessage">Velg dør for å sjekke</p>
 
     <script>
         const age = 18
@@ -17,6 +19,22 @@
             document.getElementById("carmessage").innerHTML = "Ja"
         } else{
             document.getElementById("carmessage"). innerHTML = "Nei"
+        }
+        //vi skal sjekke om en dør er låst, og om spilleren har nøkkel for å låse opp 
+        const door1_locked = true
+        const door2_locked = false
+        const backpack = "key"
+        let doormsg = document.getElementById("doormessage").innerHTML
+        console.log(doormsg)
+        if(door1_locked === false) {
+            doormsg = "Ja"
+
+        } else{
+            if(backpack === "key") {
+                doormsg.innerHTML = "Ja"
+            } else {
+                doormsg.innerHTML = "Nei"
+            }
         }
     </script>
 </body>
