--- a/objectarray.html
+++ b/objectarray.html
@@ -11,14 +11,14 @@
     </p>
 
     <script>
-        const lecturer = {
+        const lecturer = [{
             personname: "Jan Ferrer", 
             office: "H0114",
             email:"janaragonferrer@outlook.com",
             birthyear:"2004",
             courses:["Innføring i programmering", "Digital markedsføring","Designmetoder","3D-animasjon"]
 
-        }
+        }]
 
         document.getElementById("contactinfo").innerHTML = `${lecturer.personname} sitter på kontor ${lecturer.office}, Epost ${lecturer.email},han har disse faga'
         ${lecturer.courses}`
