--- a/loops.html
+++ b/loops.html
@@ -14,8 +14,14 @@
         /* For-løkke tre parametere
         1) startpunkt
         2) stopp-punkt
-        */
+        3) utroping av teller*/
+for(let teller = 1; teller <= 20; teller++) (
+    console.log(teller)
+)
 
+//while-løkker
+let whileletter = 3
+while(whileletter > 15) (console.log["Jeg kjører fortsatt:"])
     </script>
 </body>
 </html>
