--- a/arbeidskrav2/bondesjakk.html
+++ b/arbeidskrav2/bondesjakk.html
@@ -89,18 +89,23 @@
     <script>
 //arbeidskrav 2 kommentar: 
 //Oppgave 1
-//1. Endret syntaxerror på line 118, konsoll nevnte
-//2. Endret syntaxerror på line 196 - 201, konsoll nevnte
-//3. Endret syntaxerror på lin 245:17, konsoll nevnte
-//4. Endret syntaxerror på line 173:43, brukte ChatGPT
+//1. Endret syntaxerror på line 134, konsoll nevnte mangle ";"
+//2. Endret syntaxerror på line 196 - 201 for min, konsoll nevnte ifff endret til if 
+//3. Endret syntaxerror på lin 245:17, konsoll nevnte, endret slik at dette ble til en kommentar
+//4. Endret syntaxerror på line 173:43 som konsoll nevnte, brukte ChatGPT, så at det var feil i syntax med event,
+//endret til EventAddListener
 
 //Oppgave 2 
 //1. La til på line 296, 321 og 322. Brukt først ChatGPT, fant ut resten selv. 
+//Med denne så la jeg til at playerturn endret til gull når en spiller har vunnet
+// og lagt til at det andrer tilbake igjen når spillet er restartet
+//De er markerte med "oppgave 2" 
 
-//Oppgave 3, Settimeout funksjon fungerer, sjekk line 238.
+//Oppgave 3, Settimeout funksjon fungerer, sjekk line ca 238-242. market med "oppgave 3".
+//satt sjekk timeout fuction på sjekk vinner til 1000ms
 
 //Oppgave 4  Legge til gullfargen på brikkene når spilleren vinner
-// dette er endret på line 327 og 364.
+// dette er endret på line ca 327 og 364. Markert med "Oppgave 4"
 
 
         /* For å forstå hvorfor vi har celle-IDene 0 - 8 i HTML-koden over:
@@ -235,9 +240,11 @@
                     //utgjør en vinnerkombinasjon. Denne funksjonaliteten ligger i funksjonen sjekkVinner(),
                     //siden dette er et litt større sett med handlinger og kan gi noen ulike utfall.
 
+                    //Oppgave 3 -- 
                     //Sjekket W3schools, men fikk ikke til å forstå det som det skal. 
                     //brukte const = myTimeout settimeout osv, men det fungerte ikke, sjekket med chatGPT om dette
-                    //setter timout på function som er sjekkVinner på en delay på 1000ms = 1 sekund. 
+                    //setter timout på function som er sjekkVinner på en delay på 1000ms = 1 sekund.
+                    //fjernet sjekkvinner() fordi dette ødelegget koden. 
                     setTimeout(function() {
                      sjekkVinner();
                      }, 1000); 
@@ -267,7 +274,7 @@
             //Hvis spillstatus er false, avslutter vi funksjonen uten å utføre noen handlinger.
             } else {
                 //Så returnerer vi spillet
-                //arbeidskrav 2 kommentar: det var ikke skrevet ordent som en javascript kommentar
+                //arbeidskrav 2 oppgave 1 kommentar: det var ikke skrevet ordentlig som en javascript kommentar
                 //la til en skråstrek til
                 return;
             }
@@ -311,6 +318,7 @@
                 document.getElementById("playerturn").innerHTML = "Spiller " + player + " har vunnet!";
                 //Gjør restart spill-knappen synlig
                 document.getElementById("playerturn").style.backgroundColor = "#FFD700";
+                //Oppgave 2 -- 
                 //Spurte ChatGPT om hjelp. Når runden er vunnet, altså true,
                 // vil bakgrunnsfargen endre seg til gull
                 document.getElementById("newgame").style.display = "block";
@@ -319,7 +327,7 @@
 
                 //Oppgave 4 --
                 //Jeg vil bare ha gullfarge på de cellene/brikkene som er gull, 
-                //da endre jeg bare color på vinnerkomboplass 1,2,3 til gull når fuction er på sjekkvinner
+                //da endrer jeg bare color på vinnerkomboplass 1,2,3 til gull når fuction er på rundenVunnet === true
                 //Spurte også ChatGPT om innspill
 
                 document.getElementById("celle" + vinnerKomboPlass1).style.color = "#FFD700"; // Sett farge på vinnercellen 1
@@ -349,9 +357,10 @@
             }
 
             document.getElementById("playerturn").style.backgroundColor = "#ccc";
-            document.getElementById("playerturn").style.color = "#34495E";
+            
+            //Oppgave 2--
             //Det var gult når jeg startet spillet så endret dette tilbake
-             //background-color: #ccc;
+             //background-color: #ccc
              //den var gul selv om spillet var restartet, la til dette. 
          
             // 2)
