--- a/arbeidskrav2/bondesjakk.html
+++ b/arbeidskrav2/bondesjakk.html
@@ -403,7 +403,7 @@
 
             document.getElementById("playerturn").innerHTML = 'Spiller <span id="player">1</span> (<span id="playermark">X</span>) sin tur:';
 
-            //oppgave 5, med "antallspill", for hver gang gamet restarer, oppdaterer antallSpillDisplay seg 
+            //oppgave 5, med "antallspill", for hver gang spillet restarer, oppdaterer antallSpillDisplay seg 
             antallSpill++;
     document.getElementById("antallSpillDisplay").innerHTML = antallSpill;
 }  
