ferdig med arbeidskrav 2

--- a/arbeidskrav2/bondesjakk.html
+++ b/arbeidskrav2/bondesjakk.html
@@ -128,6 +128,8 @@
 //Til slutt lagt til kode på line 406. Dette gjør at hvor hver gang spillet restarter, 
 //så oppdateres span id ="antallSpillDisplay"
 
+//Oppgave 6 ikke løst. 
+
 
         /* For å forstå hvorfor vi har celle-IDene 0 - 8 i HTML-koden over:
         I alle programmeringsspråk brukes arrayer for å lagre strukturert informasjon.
