--- a/arbeidskrav2/Arbeidskrav 2 Jan Ferrer Innfprog24 bondesjakk.html
+++ b/arbeidskrav2/Arbeidskrav 2 Jan Ferrer Innfprog24 bondesjakk.html
@@ -67,7 +67,7 @@
             color: white;
             cursor: pointer;
         }
-
+/*Oppgave 5 Styling for antallspill*/
         #antallspill {
     margin: 20px auto;
     padding: 10px;
